Fix .contact-links line-wrap bug

--- a/style.css
+++ b/style.css
@@ -233,7 +233,10 @@ header {
 }
 .contact-links {
   font-weight: 700;
-  line-height: 2.3rem
+  line-height: 2.3rem;
+}
+.do-not-break {
+  white-space: nowrap;
 }
 .end-spacer {
   box-shadow: 0px 0px 4px 6px #000000de;
